Add mailchimp email list signup form

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,34 @@
 <footer class="site-footer h-card">
     <data class="u-url" href="{{ "/" | relative_url }}"></data>
-    <script>window.upsettings = {'api_key': 'MlXIsLEVhNtLb8XFpaD7HNCzPuxkkqhH3nw2iZ1BRDotF5WTTaDJ1pV4UduJ'}</script><script>(function(){var w=window;var up=w.Upscribe;if(typeof up==="function"){up('reattach_activator');up('update',upsettings);}else{var d=document;var i=function(){i.c(arguments)};i.q=[];i.c=function(args){i.q.push(args)};w.Upscribe=i;function l(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://upscri.be/js/snippet.js';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);}if( w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})()</script>
-    <div class="upscribe-embed" data-src="https://upscri.be/vjdyns"></div>
+    <!-- Begin Mailchimp Signup Form -->
+    <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+    <style type="text/css">
+	    #mc_embed_signup {
+        background:#fff;
+        clear:left;
+        width:100%;
+      }
+    </style>
+    <div id="mc_embed_signup">
+      <form
+          action="https://billywasfree.us3.list-manage.com/subscribe/post?u=7d94cdb510ae99e606af8a575&amp;id=e38fc7bd8a"
+          method="post"
+          id="mc-embedded-subscribe-form"
+          name="mc-embedded-subscribe-form"
+          class="validate"
+          target="_blank"
+          novalidate>
+          <div id="mc_embed_signup_scroll">
+          <label for="mce-EMAIL">Get these stories in your inbox</label>
+          <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+          <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+          <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_7d94cdb510ae99e606af8a575_e38fc7bd8a" tabindex="-1" value=""></div>
+          <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+        </div>
+      </form>
+    </div>
+    <!--End mc_embed_signup-->
+
     <div class="wrapper">
   
       <div class="footer-col-wrapper">
