Add stat counter

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,7 +28,6 @@
       </form>
     </div>
     <!--End mc_embed_signup-->
-
     <div class="wrapper">
   
       <div class="footer-col-wrapper">
@@ -38,5 +37,21 @@
       </div>
   
     </div>
+
+    <!-- Default Statcounter code for Billy Was Free http://billywasfree.com -->
+<script type="text/javascript">
+  var sc_project=12065046; 
+  var sc_invisible=0; 
+  var sc_security="298b3b92"; 
+  var sc_https=1; 
+  var sc_remove_link=1; 
+  var scJsHost = "https://";
+  document.write("<sc"+"ript type='text/javascript' src='" + scJsHost+
+  "statcounter.com/counter/counter.js'></"+"script>");
+  </script>
+  <noscript><div class="statcounter"><img class="statcounter"
+  src="https://c.statcounter.com/12065046/0/298b3b92/0/" alt="hit
+  counter"></div></noscript>
+  <!-- End of Statcounter Code -->
   
   </footer>
